--- a/MaterialDesignTest/App.xaml
+++ b/MaterialDesignTest/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="DmxController.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MaterialDesignTest"
+             xmlns:local="clr-namespace:DmxController"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
