--- a/MaterialDesignTest/Views/Modules/ColorBalanceModuleView.xaml
+++ b/MaterialDesignTest/Views/Modules/ColorBalanceModuleView.xaml
@@ -14,7 +14,7 @@
              TextElement.FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel>
+    <StackPanel Margin="16">
         <Label Content="Color balance" />
         <Label FontSize="9" Content="Rouge" Margin="0 16 0 8" />
         <TextBox Text="{Binding Parent.R}" />
