--- a/MaterialDesignTest/MainWindow.xaml
+++ b/MaterialDesignTest/MainWindow.xaml
@@ -100,7 +100,7 @@
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="Options">
+                <MenuItem Header="Options" Command="{Binding DataContext.ShowSettings, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{x:Null}">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="Settings" />
                     </MenuItem.Icon>
