--- a/MaterialDesignTest/Views/SettingsView.xaml
+++ b/MaterialDesignTest/Views/SettingsView.xaml
@@ -35,6 +35,11 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="0.1*" />
+        </Grid.RowDefinitions>
+
         <Menu>
             <Menu.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -57,5 +62,10 @@
             </MenuItem>
         </Menu>
         <ContentControl Grid.Column="1" Content="{Binding CurrentPageViewModel}" />
+
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button Content="Annuler" Margin="8 0 8 0" Command="{Binding DataContext.CancelDialog, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
+            <Button Content="Ok" Margin="8 0 8 0" Command="{Binding DataContext.ConfirmDialog, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
+        </StackPanel>
     </Grid>
 </Window>
