--- a/MaterialDesignTest/Views/HomeView.xaml
+++ b/MaterialDesignTest/Views/HomeView.xaml
@@ -26,7 +26,8 @@
                     <materialDesign:PackIcon Kind="FilePlus" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Ouvrir fichier">
+            <MenuItem Header="Ouvrir fichier" Command="{Binding DataContext.ChangePageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                      CommandParameter="{Binding DataContext.PageViewModels[2], RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
                 <MenuItem.Icon>
                     <materialDesign:PackIcon Kind="FileFind" />
                 </MenuItem.Icon>
